Corrections de bugs et de tests

--- a/templates/article/index.html
+++ b/templates/article/index.html
@@ -29,7 +29,7 @@
 
 
 
-{% block content %}
+{% block content_after %}
     {% if articles %}
         <div class="tutorial-list">
             {% for article in articles %}
