--- a/templates/member/new_password/success.html
+++ b/templates/member/new_password/success.html
@@ -15,7 +15,7 @@
 
 
 {% block breadcrumb %}
-    <li><a href="#">Nouveau mot de passe</a></li>
+    <li>Nouveau mot de passe</li>
 {% endblock %}
 
 
