--- a/templates/tutorial/index.html
+++ b/templates/tutorial/index.html
@@ -28,7 +28,7 @@
 
 
 
-{% block content %}
+{% block content_after %}
     {% if tutorials %}
         <div class="tutorial-list">
             {% for tutorial in tutorials %}
