--- a/templates/forum/includes/topic_row.part.html
+++ b/templates/forum/includes/topic_row.part.html
@@ -31,10 +31,12 @@
                 <em>
                     {% include "misc/member_item.part.html" with member=topic.author %}
                 </em>
-                -
-                {% for tag in topic.tags.all %}
-                    <a href="{% url "zds.forum.views.find_topic_by_tag" tag.slug %}" class="topic-tag">{{ tag.title }}</a>
-                {% endfor %}
+                {% if topic.tags.all %}
+                    -
+                    {% for tag in topic.tags.all %}
+                        <a href="{% url "zds.forum.views.find_topic_by_tag" tag.slug %}" class="topic-tag">{{ tag.title }}</a>
+                    {% endfor %}
+                {% endif %}
             </p>
         </div>
     {% endwith %}
