--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -313,9 +313,10 @@
 
                 a {
                     display: block;
+                    overflow: hidden;
+                    position: relative;
                     height: 100%;
                     width: 100%;
-                    overflow: hidden;
 
                     &,
                     &:hover,
@@ -351,7 +352,7 @@
                 .username {
                     display: block;
                     float: left;
-                    margin: 3px 0 3px 7px;
+                    margin: 3px 0 0 7px;
                     color: #95D7F5;
                     width: 50%;
                     overflow: hidden;
@@ -366,10 +367,12 @@
                 }
                 .topic {
                     display: block;
-                    padding: 4px 7px 0;
-                    height: 25px;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
                     overflow: hidden;
-                    float: left;
+                    height: 25px;
+                    padding: 4px 7px 2px;
                 }
 
                 &:nth-child(2n+1) {
@@ -1150,7 +1153,6 @@
 
         a {
             padding: 0 15px;
-            width: 100%;
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
