--- a/templates/member/register/token_success.html
+++ b/templates/member/register/token_success.html
@@ -23,7 +23,7 @@
 
 {% block content %}
     <p>
-        Vous avez confirmé votre email sur le site. <a href="{% url "zds.member.views.details" user.username %}">Voir votre profil</a>.
+        Vous avez confirmé votre email sur le site. <a href="{% url "zds.member.views.details" usr.username %}">Voir votre profil</a>.
     </p>
     <p>
         Vous pouvez maintenant poster des messages sur le site.
