Ajout des thumbnails des articles

--- a/templates/article/includes/article_item.part.html
+++ b/templates/article/includes/article_item.part.html
@@ -4,8 +4,8 @@
 
 <article>
     <a href="{{ link }}">
-        {% if article.image %}
-            <img src="{{ article.image.thumb.url }}" alt="" class="tutorial-img avatar">
+        {% if article.thumbnail %}
+            <img src="{{ article.thumbnail.url }}" alt="" class="tutorial-img avatar">
         {% endif %}
 
         <div class="tutorial-infos">
