Marges sur tous les titres sur mobile

--- a/assets/css/scss/_mobile-tablet.scss
+++ b/assets/css/scss/_mobile-tablet.scss
@@ -563,6 +563,9 @@
             h1,
             h2,
             h3,
+            h4,
+            h5,
+            h6,
             .subtitle,
             .authors {
                 padding-left: 15px;
