Corrections messages forum

--- a/templates/forum/post/edit.html
+++ b/templates/forum/post/edit.html
@@ -28,4 +28,8 @@
 
 {% block content %}
     {% crispy form %}
+
+    {% if form.text.value %}
+        {% include "misc/previsualization.part.html" with text=form.text.value %}
+    {% endif %}
 {% endblock %}
