--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -933,6 +933,7 @@
         padding: 0;
         font-size: 20px;
         font-size: 2.0rem;
+        height: 27px;
         width: 100%;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -1741,6 +1742,10 @@ table {
                 margin-top: 7px;
             }
 
+            .message-hidden-content {
+                display: none;
+            }
+
             .message-edited,
             .message-hidden,
             .message-helpful {
@@ -1754,7 +1759,8 @@ table {
                     }
                 }
             }
-            .message-edited {
+            .message-edited,
+            .message-hidden {
                 font-style: italic;
                 color: #999;
 
@@ -1762,9 +1768,11 @@ table {
                     @include opacity(.5);
                 }
             }
+            .message-hidden {
+                margin-top: 1px;
+            }
             .message-helpful {
                 color: #48A200;
-                background: none;
                 text-indent: 20px;
             }
 
@@ -2032,6 +2040,9 @@ form.topic-message {
         &:not([type=checkbox]):not([type=radio]) {
             width: calc(98% - 32px) !important;
         }
+    }
+    label {
+        margin: 0 15px;
     }
     textarea {
         margin-top: 0;
