Modification du nom d'un champ - #627

--- a/templates/email/assoc_subscribe.html
+++ b/templates/email/assoc_subscribe.html
@@ -12,7 +12,7 @@ Bonjour, membres du CA !,
     <li>Prénom : {{ first_name }}</li>
     <li>Nom de famille : {{ surname }}</li>
     <li>Adresse mail : {{ email }}</li>
-    <li>Adresse : {{ adresse1 }}, {{ adresse2 }}</li>
+    <li>Adresse : {{ adresse }}, {{ adresse_complement }}</li>
     <li>CP et ville : {{ code_postal }} {{ ville }}</li>
     <li>Pays : {{ pays }}</li>
 </ul>
