--- a/templates/forum/find/topic_by_tag.html
+++ b/templates/forum/find/topic_by_tag.html
@@ -11,7 +11,7 @@
 
 
 {% block breadcrumb %}
-    <li>{{tag.title}}</li>
+    <li>Tag : {{tag.title}}</li>
 {% endblock %}
 
 
@@ -24,12 +24,12 @@
 
 {% block content %}
     {% include "misc/pagination.part.html" with position="top" %}
-        <table class="topics-entries">
-            <tbody>
-                {% for topic in topics %}
-                    {% include "includes/topic_row.part.html" %}
-                {% endfor %}
-            </tbody>
-        </table>
+
+    <div class="topic-list">
+        {% for topic in topics %}
+            {% include "forum/includes/topic_row.part.html" %}
+        {% endfor %}
+    </div>
+
     {% include "misc/pagination.part.html" with position="bottom" %}
 {% endblock %}
