--- a/assets/css/scss/_wide.scss
+++ b/assets/css/scss/_wide.scss
@@ -382,7 +382,7 @@
             &:after {
                 top: 9px;
                 left: -19px;
-                border-right-color: #FBFBFB;
+                border-right-color: #FDFDFD;
             }
         }
     }
