--- a/assets/css/scss/main.scss
+++ b/assets/css/scss/main.scss
@@ -37,6 +37,12 @@ $sidebar-hover: #FFF;
 // Margins
 $modal-margin: 25px;
 
+// Font Famillies
+$font-sans-serif: "Segoe UI", "Trebuchet MS", Helvetica, "Helvetica Neue", Arial, sans-serif;
+$font-serif: "Liberation Serif", "Times New Roman", Times, Georgia, FreeSerif, serif;
+$font-sans-serif-active: "Roboto", sans-serif;
+$font-serif-active: "Droid Serif", serif;
+
 
 
 /**
